Shang New Live/src/objects/Level__c.object
<CustomObject>
    <fields>
        <fullName>Floor_Plan_Date__c</fullName>
        <label>Floor Plan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Plan__c</fullName>
        <label>Floor Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GFA_SQF__c</fullName>
        <label>GFA (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NLA_SQF__c</fullName>
        <label>NLA (SQF)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Tower_Block__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tower/Block</label>
        <referenceTo>Tower_Block__c</referenceTo>
        <relationshipLabel>Levels</relationshipLabel>
        <relationshipName>Levels</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Level</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Property__c</columns>
        <columns>GFA_SQF__c</columns>
        <columns>NLA_SQF__c</columns>
        <columns>Floor_Plan_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Level Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Levels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>